2009-11-13  Eric Seidel  <eric@webkit.org>

        No review, build fix only.

        Fix Debug build after http://trac.webkit.org/changeset/50960.

        The CounterNode class does not support all methods necessary to efficiently update the counter tree as needed per CSS2.1
        https://bugs.webkit.org/show_bug.cgi?id=31213

        * rendering/CounterNode.cpp:
        (WebCore::showTreeAndMark):
        * rendering/RenderCounter.cpp:
        (WebCore::destroyCounterNodeChildren):

2009-11-13  Dirk Schulze  <krit@webkit.org>

        Reviewed by Gustavo Noronha.

        [CAIRO] shadow support for Canvas and SVG
        [https://bugs.webkit.org/show_bug.cgi?id=30960]

        We currently fill a path with solid color instead of filling
        a clipping path. This causes problems on some composite operators,
        since Cairo modifies the area outside the path.
        This fixes the behavior of WebKitGtk on fast/canvas/canvas-composite-alpha.html

        Thanks to Benjamin Otte for tracking the bug down.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::setPlatformFill):

2009-11-12  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dimitri Glazkov.

        Adding Chromium's DatabaseTracker implementation.

        https://bugs.webkit.org/show_bug.cgi?id=31440

        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * storage/DatabaseTracker.h:
        * storage/chromium/DatabaseTrackerChromium.cpp:
        (WebCore::DatabaseTracker::fullPathForDatabase):
        (WebCore::DatabaseTracker::getMaxSizeForDatabase):
        * storage/chromium/QuotaTracker.cpp:
        (WebCore::QuotaTracker::updateDatabaseSize):
        * storage/chromium/QuotaTracker.h:

2009-11-13  Carol Szabo  <carol.szabo@nokia.com>

        Reviewed by Darin Adler.

        The CounterNode class is missing some basic tree navigation methods common in other WebKit trees such as the rendering tree