@@ -279,6 +279,12 @@ StringType v8StringToWebCoreString(v8::Handle<v8::String> v8String, ExternalMode
     }
     return result;
 }
+    
+// Explicitly instantiate the above template with the expected parameterizations,
+// to ensure the compiler generates the code; otherwise link errors can result in GCC 4.4.
+template String v8StringToWebCoreString<String>(v8::Handle<v8::String>, ExternalMode);
+template AtomicString v8StringToWebCoreString<AtomicString>(v8::Handle<v8::String>, ExternalMode);
+
 
 String v8NonStringValueToWebCoreString(v8::Handle<v8::Value> object)
 {
